# steevlib

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  Taskfile.yml  conanfile.py
cmake/: dev-mode.cmake  docs.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp
src/containers/: array.hpp  vector.hpp
src/memory/: default_delete.hpp  pointer_traits.hpp  shared_ptr.hpp  unique_ptr.hpp
src/memory/smart_ptr/: control_block.hpp  shared_ptr.hpp  unique_ptr.hpp  weak_ptr.hpp
test/: CMakeLists.txt
test/source/: stdlib_test.cpp
test/source/memory/: unique_ptr.cpp
test/src/containers/: array.cpp  vector.cpp
test/src/memory/: default_delete.cpp  pointer_traits.cpp  shared_ptr.cpp  unique_ptr.cpp  weak_ptr.cpp
